--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: AyCrazy Jekyll
+title: Andrew Yaspan Blog
 email: aty003@bucknell.edu
 description: > # this means to ignore newlines until "baseurl:"
   First Jekyll Blog-site arrright.
